syntax = "proto3";

package arrus.proto;

import "arrus/core/io/proto/devices/us4r/RxSettings.proto";

message Us4OEMSettings {
  repeated uint32 channel_mapping = 1;
  repeated bool active_channel_groups = 2;
  RxSettings rx_settings = 3;
}